# torrent-match

./: .env.example  .gitignore  MANIFEST.in  METADATA.json  README.md  USAGE.md  analyse_dataset.py  dataset.md  process_dataset.py  pyproject.toml  requirements.txt  test.py
analysis/: README.md  __init__.py  detector_agreement_analysis.py  individual_detector_analysis.py  run_analysis.py
examples/: simple_match.py
generate_dataset/: README.md  database_structure.md  generate_peer_stats.py  models.py  peer_stats.json  sample.py  test_sample.py
tests/: conftest.py  test_matching.py  test_torrent_file_parser.py
torrent_detector/: __init__.py  detector.py  episode_extractor.py  file_structure_detector.py  models.py  preprocessor.py  title_confidence.py  tmdb_enricher.py  tmdb_validator.py  verbose.py
torrent_detector/parsers/: __init__.py  base.py  guessit_parser.py  llm_parser.py  ptn_parser.py  rebulk_parser.py  regex_parser.py
torrent_match/: README.md  __init__.py  __main__.py  cli.py  match.py  torrent_file_parser.py
